--- a/src/arm/BB-BONE-NH7C-01-A0.dts
+++ b/src/arm/BB-BONE-NH7C-01-A0.dts
@@ -223,6 +223,8 @@
 						vsync-len = <3>;
 						hsync-active = <0>;
 						vsync-active = <0>;
+						de-active = <1>;
+						pixelclk-active = <0>;
 					};
 				};
 			};
