--- a/src/arm/PB-I2C2-WEATHER-CLICK.dts
+++ b/src/arm/PB-I2C2-WEATHER-CLICK.dts
@@ -24,6 +24,11 @@
 			bmp280@76 {
 				compatible = "bosch,bme280";
 				reg = <0x76>;
+				bme280,humidity_oversampling=<1>;
+				bme280,temperature_oversampling=<1>;
+				bme280,pressure_oversampling=<1>;
+				bme280,filter=<0>;
+				bme280,Tstandby=<0>;
 			};
 		};
 	};
